# django-templates-boilerplate

./: .flake8  .gitignore  .isort.cfg  Dockerfile.dev  Makefile  README.md  Taskfile.yml  docker-compose.yml  env_vars  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
accounts/: models.py
accounts/migrations/: 0001_initial.py
blog/: models.py  urls.py  views.py
blog/api/v1/: serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20220206_2233.py
blog/templates/blog/: main.haml  main.html
common/: cache.py  enums.py  hosts.py  json_utils.py  strings.py
common/dates/: getting_current_dates.py
config/: settings.py  swagger.py  urls.py
config/splitted_settings/: boilerplate.py  db.py  environ.py  installed_apps.py  middlewares.py  rest_framework.py
locale/ru/LC_MESSAGES/: django.mo  django.po
static/dev/css/: null.css
templates/: base.html
tests/: conftest.py  test_auth_jwt.py  test_get_posts.py  test_post_api.py
