[tool.poetry]
name = "django-templates-boilerplate"
version = "0.1.0"
description = ""
authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
Django = "5.1.4"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
drf-yasg = "1.21.8"
django-split-settings = "1.3.2"
django-environ = "0.11.2"
Pillow = "11.0.0"
psycopg2-binary = "2.9.10"

[tool.poetry.dev-dependencies]
isort = "5.13.2"
django-debug-toolbar = "4.4.6"
pytest-django = "4.9.0"
pytest = "8.3.4"
ipython = "8.18.1"
beautifulsoup4 = "4.12.3"
model-bakery = "1.20.0"
lxml = "4.9.4"
flake8 = "7.1.1"
flake8-commas = "4.0.0"
flake8-eradicate = "1.5.0"
flake8-print = "5.0.0"
time-machine = "2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
